<resources>
    <string name="app_name">HappySchool</string>
    <string name="login_name">手机</string>
    <string name="login_pass">密码</string>
    <string name="sure_pass">确认密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_sms">请输入验证码</string>
    <string name="forgot_pass">忘记密码？</string>
    <string name="gotoregist">立即注册</string>
    <string name="get_sms">获取验证码</string>
</resources>
