<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xvyang.happyschool.LoginActivity">


    <TextView
        android:id="@+id/ext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/login_title_dm"
        android:text="@string/app_name"
        android:layout_marginTop="120dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/login_top_btn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ext_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/login_top_btn_margin"
            android:layout_height="@dimen/login_login_ll_height"
            android:background="@mipmap/btn_bg"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_txt_size"
                android:text="@string/login_name"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/lg_mobile"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_name"
                android:textSize="@dimen/login_txt_size"
                android:background="@null"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/login_top_btn_margin"
            android:layout_height="@dimen/login_login_ll_height"
            android:background="@mipmap/btn_bg"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_txt_size"
                android:text="@string/login_pass"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_pass"
                android:textSize="@dimen/login_txt_size"
                android:background="@null"
                android:layout_weight="3"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/login_top_btn_margin"
        android:layout_height="@dimen/login_login_ll_height"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/login_btn"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/login_top_btn_margin"
            android:layout_height="@dimen/login_login_ll_height"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fogetPass"
                android:layout_width="0dip"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/go_register"
                android:layout_width="0dip"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/gotoregist"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
